[gd_scene load_steps=4 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://assets/1x/back-0062ff.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Card" type="Area2D" index="0"]

position = Vector2( 111.911, 135.18 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}
card_number = 0
suit = "heart"
value = null

[node name="CardSprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.0245568, -0.620456 )
scale = Vector2( 3.19625, 4.77307 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


